Subo video ruta.html

--- a/portafolio.html
+++ b/portafolio.html
@@ -76,14 +76,14 @@
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
                         data-title="Sistema de Facturación Java"
                         data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="https://www.youtube.com/watch?v=q4zKS19HCUM" data-img="assets/img/facturacion1.png">
+                        data-video="prueba1sim.mp4" data-img="assets/img/facturacion1.png">
                         <img src="img/Simulacionvr.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
                         <h5>Simulacion Frontera Venezuela Colombia RV</h5>
                         <p>Aplicación creada para crear consciencia sobre la situación que tienen que atravesarlos
                             venezolanes al venir a nuestro pais, experiencia inmersiva creada en Unity para las gafas
                             Oculus.</p>
-                        <span class="badge badge-skill">Java</span>
-                        <span class="badge badge-skill">POO</span>
+                        <span class="badge badge-skill">Unity</span>
+                        <span class="badge badge-skill">VR</span>
                         <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
                     </div>
                 </div>
@@ -219,5 +219,6 @@
     <script src="portafolio.js"></script>
 
 </body>
+
 
 </html>
