--- a/portafolio.html
+++ b/portafolio.html
@@ -82,11 +82,13 @@
 
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="prueba1sim.mp4" data-img="assets/img/facturacion1.png">
+                        data-title="Simulación Frontera Venezuela Colombia RV"
+                        data-desc="Aplicación creada para crear consciencia sobre la situación que tienen que atravesarlos
+                            venezolanes al venir a nuestro pais, experiencia inmersiva creada en Unity para las gafas
+                            Oculus."
+                        data-video="https://www.youtube.com/embed/q4zKS19HCUM" data-img="assets/img/facturacion1.png">
                         <img src="img/Simulacionvr.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
-                        <h5>Simulacion Frontera Venezuela Colombia RV</h5>
+                        <h5>Simulación Frontera Venezuela Colombia RV</h5>
                         <p>Aplicación creada para crear consciencia sobre la situación que tienen que atravesarlos
                             venezolanes al venir a nuestro pais, experiencia inmersiva creada en Unity para las gafas
                             Oculus.</p>
@@ -104,19 +106,19 @@
                  <!-- Foundever Cairo -->
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="\videos\7736.mp4" data-img="assets/img/facturacion1.png">
+                        data-title="Réplica del site de Cairo"
+                        data-desc="Videojuego réplica del site de Cairo de Egipto de Foundever."
+                        data-video="https://www.youtube.com/embed/RIxiO9urYTo" data-img="assets/img/facturacion1.png">
                         <img src="img/CairoSite.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
-                        <h5>Modelo del site de Cairo</h5>
-                        <p> del site de Cairo Egipto</p>
+                        <h5>Réplica del site de Cairo</h5>
+                        <p>Videojuego réplica del site de Cairo de Egipto de Foundever.</p>
                         <span class="badge badge-skill">Unity</span>
                         <span class="badge badge-skill">VR</span>
-                        <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
+                        <a href="https://youtu.be/RIxiO9urYTo" target="_blank" ></a>
                         <br>
-                        <a href="https://www.spatial.io/s/Cairo-Site-Foundever-64d39ff002931161c9022667" target="_blank"
+                        <a href="https://youtu.be/RIxiO9urYTo" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.spatial.io/s/Cairo-Site-Foundever-64d39ff002931161c9022667" target="_blank"
+                            <a href="https://youtu.be/RIxiO9urYTo" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -127,8 +129,8 @@
                  <!-- FILTRO FOUNDEVER juego -->
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
+                        data-title="Juego para instagram y facebook para Foundever"
+                        data-desc="Juego donde el jugador se mueve siguiendo la nariz con Realidad aumentada."
                         data-video="\videos\JuegoFiltro.mp4" data-img="assets/img/facturacion1.png">
                         <img src="img/JuegoFiltro.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
                         <h5>Juego para instagram y facebook para Foundever</h5>
@@ -147,7 +149,7 @@
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
                         data-title="Filtro de instagram y facebook para Foundever"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
+                        data-desc="Te permite manipular el logo de Foundever con las manos, moverlo y cambiar su tamaño."
                         data-video="\videos\FiltroLogoGrande.mp4" data-img="assets/img/facturacion1.png">
                         <img src="img/FoundeverFilter.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
                         <h5>Filtro de logo instagram y facebook para Foundever</h5>
@@ -165,8 +167,8 @@
                 <!-- FILTRO FOUNDEVER -->
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
+                        data-title="Filtro de corazón instagram y facebook para Foundever"
+                        data-desc="Filtro para redes que manipula un corazón con el movimiento de la cabeza. Lo hace aparecer, crecer y desaparecer."
                         data-video="\videos\Hearth.mp4" data-img="assets/img/facturacion1.png">
                         <img src="img/hearth.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
                         <h5>Filtro de corazón instagram y facebook para Foundever</h5>
@@ -185,19 +187,19 @@
                  <!-- Foundever Bogotá -->
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="\videos\ColombiaFo.mp4" data-img="assets/img/facturacion1.png">
+                        data-title="Modelo del site de Bogotá de Foundever"
+                        data-desc="Videojuego réplica del site de Bogotá Colombia de Foundever."
+                        data-video="https://www.youtube.com/embed/n0DQTB0aCbg" data-img="assets/img/facturacion1.png">
                         <img src="img/FoundCol.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
-                        <h5>Modelo del site de Bogotá</h5>
-                        <p> Juego del site de Bogotá de Foundever.</p>
+                        <h5>Modelo del site de Bogotá de Foundever</h5>
+                        <p> Videojuego réplica del site de Bogotá Colombia de Foundever.</p>
                         <span class="badge badge-skill">Unity</span>
                         <span class="badge badge-skill">VR</span>
-                        <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
+                        <a href="https://youtu.be/n0DQTB0aCbg" target="_blank" ></a>
                         <br>
-                        <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                        <a href="https://youtu.be/n0DQTB0aCbg" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.spatial.io/s/Cairo-Site-Foundever-64d39ff002931161c9022667" target="_blank"
+                            <a href="https://youtu.be/n0DQTB0aCbg" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -205,21 +207,19 @@
                 <!-- JUEGO CONCENTRESE -->
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="\videos\RAConcentrese.mp4" data-img="assets/img/facturacion1.png">
+                        data-title="Juego de concentrese para aprender inglés  en realidad virtual."
+                        data-desc="Juego de concentrese con comida para que los niños aprendan palabras en ingles."
+                        data-video="https://www.youtube.com/embed/eiIbpTauAAw" data-img="assets/img/facturacion1.png">
                         <img src="img/RAConcentrese.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
-                        <h5>Juego de concentrese para aprender ingles en realidad virtual.</h5>
-                        <p>Aplicación creada para crear consciencia sobre la situación que tienen que atravesarlos
-                            venezolanes al venir a nuestro pais, experiencia inmersiva creada en Unity para las gafas
-                            Oculus.</p>
+                        <h5>Juego de concentrese para aprender inglés  en realidad virtual.</h5>
+                        <p>Juego de concentrese con comida para que los niños aprendan palabras en ingles.</p>
                         <span class="badge badge-skill">Unity</span>
                         <span class="badge badge-skill">VR</span>
-                        <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
+                        <a href="https://youtube.com/shorts/eilbpTauAAw?feature=share" target="_blank" ></a>
                         <br>
-                        <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                        <a href="https://youtube.com/shorts/eilbpTauAAw?feature=share" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                            <a href="https://youtube.com/shorts/eilbpTauAAw?feature=share" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -227,21 +227,19 @@
                 <!-- jam vr -->
                 <div class="col-md-4">
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
-                        data-title="Sistema de Facturación Java"
-                        data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="\videos\JAM VR.mp4" data-img="assets/img/facturacion1.png">
+                        data-title="JAM VR Pirámide"
+                        data-desc="Proyecto final de un JAM de realidad virtual de la universidad de los Andes sobre una simulación de una pirámide en su interior."
+                        data-video="https://www.youtube.com/embed/BcsbGpzsTKI" data-img="assets/img/facturacion1.png">
                         <img src="img/Egypt.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
-                        <h5>JAM VR.</h5>
-                        <p>Aplicación creada para crear consciencia sobre la situación que tienen que atravesarlos
-                            venezolanes al venir a nuestro pais, experiencia inmersiva creada en Unity para las gafas
-                            Oculus.</p>
+                        <h5>JAM VR Pirámide</h5>
+                        <p>Proyecto final de un JAM de realidad virtual de la universidad de los Andes sobre una simulación de una pirámide en su interior.</p>
                         <span class="badge badge-skill">Unity</span>
                         <span class="badge badge-skill">VR</span>
-                        <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
+                        <a href="https://youtu.be/BcsbGpzsTKI" target="_blank" ></a>
                         <br>
-                        <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                        <a href="https://youtu.be/BcsbGpzsTKI" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                            <a href="https://youtu.be/BcsbGpzsTKI" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -322,7 +320,15 @@
 <div class="modal-body">
 <p id="modalDesc"></p>
 <img id="modalImg" class="img-fluid rounded mb-3" />
-<video id="modalVideo" class="w-100 rounded" controls></video>
+<div class="ratio ratio-16x9">
+  <iframe
+    id="modalVideo"
+    src=""
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 </div>
 </div>
 </div>
