--- a/portafolio.html
+++ b/portafolio.html
@@ -63,7 +63,7 @@
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
                         data-title="Sistema de Facturación Java"
                         data-desc="Aplicación Java orientada a objetos para gestión de facturación."
-                        data-video="prueba1sim.mp4" data-img="assets/img/facturacion1.png">
+                         data-img="assets/img/facturacion1.png">
                         <img src="img/Clinica.png" class="img-fluid rounded mb-3" alt="Proyecto Java"> 
                         <h5>Clínica VIP</h5>
                         <p>Página web de una IPS de segundo y tercer nivel de complejidad con Acreditación en salud,
@@ -96,9 +96,9 @@
                         <span class="badge badge-skill">VR</span>
                         <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
                         <br>
-                        <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                        <a href="https://youtu.be/q4zKS19HCUM" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                            <a href="https://youtu.be/q4zKS19HCUM" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     <div class="glass project-card" data-bs-toggle="modal" data-bs-target="#projectModal"
                         data-title="Juego para instagram y facebook para Foundever"
                         data-desc="Juego donde el jugador se mueve siguiendo la nariz con Realidad aumentada."
-                        data-video="\videos\JuegoFiltro.mp4" data-img="assets/img/facturacion1.png">
+                        data-video="https://youtube.com/embed/sqY0FVzbtM8?feature=share" data-img="assets/img/facturacion1.png">
                         <img src="img/JuegoFiltro.png" class="img-fluid rounded mb-3" alt="Proyecto Java">
                         <h5>Juego para instagram y facebook para Foundever</h5>
                         <p>Juego donde el jugador se mueve siguiendo la nariz con Realidad aumentada.</p>
@@ -139,9 +139,9 @@
                         <span class="badge badge-skill">VR</span>
                         <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
                         <br>
-                        <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                        <a href="https://youtube.com/shorts/sqY0FVzbtM8?feature=share" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                            <a href="https://youtube.com/shorts/sqY0FVzbtM8?feature=share" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -158,9 +158,9 @@
                         <span class="badge badge-skill">VR</span>
                         <a href="https://www.youtube.com/watch?v=q4zKS19HCUM" target="_blank" ></a>
                         <br>
-                        <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                        <a href="https://youtube.com/shorts/sqY0FVzbtM8?feature=share" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver código</a>
-                            <a href="https://www.axacolpatria.co/portalpublico-lf-clinica-vip2" target="_blank"
+                            <a href="https://youtube.com/shorts/sqY0FVzbtM8?feature=share" target="_blank"
                             class="btn btn-sm btn-outline-info mt-3">Ver demo</a>
                     </div>
                 </div>
@@ -369,4 +369,3 @@
 </body>
 
 </html>
-
